# garganDeFi

./: .env.example  .gitignore  bot.py  check_models.py  conocimiento.py  main.py  motor.py  requirements.txt  setup.py
agents/: coordinator.py  discord_agent.py  execution_agent.py  jito_executor.py  market_agent.py  news_agent.py  risk_agent.py  scanner_agent.py
cogs/: deals_cog.py  defi_cog.py
config/: system_monitor.py
core_math/: CMakeLists.txt  core_math.cpp
crawlers/: deals.py  motor.py
data/: gargandefi.db  gargandefi.db-shm  gargandefi.db-wal
defi_engine/: __init__.py  core_math.cpp  execution.py  jupiter_zap.py  math_engine.py  pool_scanner.py  quant_engine.py
execution_worker/: package-lock.json  package.json
execution_worker/src/: deposit_dlmm.ts
legacy_v1/: bot.py  conocimiento.py  motor.py
services/: broadcaster.py
tests/: check_models.py  test_core_math.py
ui/: dashboard.py  database.py  graph_maker.py
